force-app/main/default/objects/Referral__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Name of the individual you want to assign this referral to.  They will receive an email notification with the details, along with instructions on how to proceed.</inlineHelpText>
    <label>Assigned To</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6</booleanFilter>
        <filterItems>
            <field>User.User_Profile_for_Reporting__c</field>
            <operation>notEqual</operation>
            <value>FBC Credit</value>
        </filterItems>
        <filterItems>
            <field>User.User_Profile_for_Reporting__c</field>
            <operation>notEqual</operation>
            <value>FBC Sales</value>
        </filterItems>
        <filterItems>
            <field>User.Users_Notes_Admin_Only__c</field>
            <operation>notEqual</operation>
            <value>No Referrals</value>
        </filterItems>
        <filterItems>
            <field>User.User_Profile_for_Reporting__c</field>
            <operation>notEqual</operation>
            <value>Fraud Operations</value>
        </filterItems>
        <filterItems>
            <field>User.User_Profile_for_Reporting__c</field>
            <operation>notEqual</operation>
            <value>Open and Fund Platform User</value>
        </filterItems>
        <filterItems>
            <field>User.User_Profile_for_Reporting__c</field>
            <operation>notEqual</operation>
            <value>Customer Care - Cloudingo</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>