force-app/main/default/objects/Referral__c/fields/Created_By_Me__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Me__c</fullName>
    <formula>IF( CreatedBy.Id = $User.Id,True,False)</formula>
    <label>Created By Me</label>
    <type>Checkbox</type>
</CustomField>