force-app/main/default/objects/Referral__c/fields/Created_from_a_Task__c.field-meta.xml
<CustomField>
    <fullName>Created_from_a_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created from a Task</label>
    <type>Checkbox</type>
</CustomField>