force-app/main/default/objects/Referral__c/fields/Date_Qualified__c.field-meta.xml
<CustomField>
    <fullName>Date_Qualified__c</fullName>
    <description>The date that a user has qualified a referral</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Qualified</label>
    <type>DateTime</type>
</CustomField>