force-app/main/default/objects/Referral__c/fields/HELOC_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>HELOC_Account_Number__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>HELOC Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>