force-app/main/default/objects/Referral__c/fields/Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Owner_Role__c</fullName>
    <description>Used to capture the referral assignee&#39;s role at completion.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Completed Owner Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>