force-app/main/default/objects/Referral__c/fields/Qualified__c.field-meta.xml
<CustomField>
    <fullName>Qualified__c</fullName>
    <formula>IF(CONTAINS(TEXT(Referral_Status__c), &quot;Qualified&quot;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Qualified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>