force-app/main/default/objects/Referral__c/fields/Referral_Comments__c.field-meta.xml
<CustomField>
    <fullName>Referral_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Referral Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>