force-app/main/default/objects/Referral__c/fields/Referral_Product__c.field-meta.xml
<CustomField>
    <fullName>Referral_Product__c</fullName>
    <label>Referral Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retail Banking</fullName>
            </value>
            <value>
                <fullName>Mortgage</fullName>
            </value>
            <value>
                <fullName>Wealth Management</fullName>
                <label>Wealth Management (Not FNIP)</label>
            </value>
            <value>
                <fullName>FNIP</fullName>
            </value>
            <value>
                <fullName>Commercial Lending</fullName>
            </value>
            <value>
                <fullName>CTS</fullName>
            </value>
            <value>
                <fullName>Commercial Card</fullName>
            </value>
            <value>
                <fullName>Small Business Banking</fullName>
            </value>
            <value>
                <fullName>Global Banking</fullName>
            </value>
            <value>
                <fullName>TSYS</fullName>
                <isActive>false</isActive>
                <label>TSYS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>