force-app/main/default/objects/Referral__c/fields/Referral_Product_Text__c.field-meta.xml
<CustomField>
    <fullName>Referral_Product_Text__c</fullName>
    <formula>text( Referral_Product__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral Product Text</label>
    <type>Text</type>
</CustomField>