force-app/main/default/objects/Referral__c/fields/Referral_Status__c.field-meta.xml
<CustomField>
    <fullName>Referral_Status__c</fullName>
    <defaultValue>&quot;New&quot;</defaultValue>
    <label>Referral Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Qualified_Create_Opp</fullName>
                <label>Qualified - Create an Opportunity</label>
            </value>
            <value>
                <fullName>Qualified - No Opportunity</fullName>
            </value>
            <value>
                <fullName>Unqualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>