force-app/main/default/objects/Referral__c/fields/Referral_Status_Text__c.field-meta.xml
<CustomField>
    <fullName>Referral_Status_Text__c</fullName>
    <formula>Text( Referral_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral Status Text</label>
    <type>Text</type>
</CustomField>