force-app/main/default/objects/Referral__c/fields/Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity created from a referral</description>
    <inlineHelpText>Opportunity created from a referral</inlineHelpText>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>