force-app/main/default/objects/Referral__c/fields/Retail_Product__c.field-meta.xml
<CustomField>
    <fullName>Retail_Product__c</fullName>
    <label>Retail Product</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Referral_Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bill.com</fullName>
            </value>
            <value>
                <fullName>Deposit Account</fullName>
            </value>
            <value>
                <fullName>FAW</fullName>
            </value>
            <value>
                <fullName>Harry A Koch</fullName>
            </value>
            <value>
                <fullName>Home Equity</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Lending Product (not HELOC)</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>Paycor</fullName>
            </value>
            <value>
                <fullName>Paymaker</fullName>
            </value>
            <value>
                <fullName>TSYS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>