force-app/main/default/objects/Referral__c/fields/Status_Override__c.field-meta.xml
<CustomField>
    <fullName>Status_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Visible with the Referral Status Override permission set. Used by Mortgage power users to change the status of referrals.</description>
    <label>Status Override</label>
    <type>Checkbox</type>
</CustomField>