force-app/main/default/objects/Referral__c/fields/Triggered_Flow_Category__c.field-meta.xml
<CustomField>
    <fullName>Triggered_Flow_Category__c</fullName>
    <description>A process flow sets this value when creating a referral from an automated task process. Used in reporting to link referrals to specific automated campaigns.</description>
    <label>Triggered Flow Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REFI19</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>