force-app/main/default/objects/Referral__c/recordTypes/Converted_Referral.recordType-meta.xml
<RecordType>
    <fullName>Converted_Referral</fullName>
    <active>true</active>
    <label>Converted Referral</label>
</RecordType>