force-app/main/default/objects/Referral__c/recordTypes/Existing_Referral.recordType-meta.xml
<RecordType>
    <fullName>Existing_Referral</fullName>
    <active>true</active>
    <description>Shows Status and Owner after creation of the record</description>
    <label>Existing Referral</label>
</RecordType>