force-app/main/default/objects/Referral__c/recordTypes/New_Referral.recordType-meta.xml
<RecordType>
    <fullName>New_Referral</fullName>
    <active>true</active>
    <description>Minimal Fields for user input</description>
    <label>New Referral</label>
</RecordType>