force-app/main/default/objects/Referral__c/validationRules/HELOC_Account_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>HELOC_Account_Number</fullName>
    <active>true</active>
    <description>Only allows editing the HELOC Account Number field if the Home Equity picklist option is selected from the Retail Product field.</description>
    <errorConditionFormula>AND(ISCHANGED( HELOC_Account_Number__c ), Text(Retail_Product__c) &lt;&gt; &quot;Home Equity&quot;)</errorConditionFormula>
    <errorDisplayField>HELOC_Account_Number__c</errorDisplayField>
    <errorMessage>Home Equity must be chosen from the Retail Product picklist</errorMessage>
</ValidationRule>