force-app/main/default/objects/Referral__c/validationRules/Qualify_own_referral.validationRule-meta.xml
<ValidationRule>
    <fullName>Qualify_own_referral</fullName>
    <active>true</active>
    <description>The Creator of a referral cannot qualify their own referral</description>
    <errorConditionFormula>And(
 ISCHANGED( Referral_Status__c ) ,
 $User.Id =  CreatedById,
   CONTAINS( Referral_Status_Text__c , &quot;Qualified&quot;) 
)</errorConditionFormula>
    <errorDisplayField>Referral_Status__c</errorDisplayField>
    <errorMessage>You can not qualify your own created referral</errorMessage>
</ValidationRule>