force-app/main/default/objects/Referral__c/validationRules/Require_HELOC_Account_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_HELOC_Account_Number</fullName>
    <active>true</active>
    <description>Retail referral with the Home Equity Retail Product cannot be qualified without a HELOC account number</description>
    <errorConditionFormula>AND( 
CONTAINS(TEXT(Referral_Status__c), &quot;Qualified&quot;), 
ISBLANK(HELOC_Account_Number__c), 
TEXT(Retail_Product__c) = &quot;Home Equity&quot; 
)</errorConditionFormula>
    <errorMessage>A Home Equity referral cannot be qualified without a HELOC Account Number.</errorMessage>
</ValidationRule>